# perp-stats-cli

./: Cargo.toml  README.md
src/: aggregate.rs  contracts.rs  error.rs  graph_client.rs  main.rs  run.rs  settings.rs
src/abis/: LnPerpExchange.json
src/queries/: lbtc_prices_lasts_query.graphql  leth_prices_lasts_query.graphql  pending_actions_query.graphql  positions_query.graphql  prices_lasts_query.graphql  trading_history_items_query.graphql
