[package]
name = "perp-stats-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.7.1", features = ["full"] }
serde_json = "1.0.64"
anyhow = "1.0.41"
reqwest = "0.11.4"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
openssl = { version = "0.10.35", features = ["vendored"] }
hex = "0.4.3"